# scrat

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: python-package.yml
0.2.0/: 404.html  index.html  objects.inv
0.2.0/getting_started/: index.html
0.2.0/reference/: index.html
0.2.0/reference/hasher/: index.html
0.2.0/reference/serializer/: index.html
0.2.0/search/: search_index.json
0.3.0/: 404.html  index.html  objects.inv
0.3.0/getting_started/: index.html
0.3.0/reference/: index.html
0.3.0/reference/hasher/: index.html
0.3.0/reference/serializer/: index.html
0.3.0/search/: search_index.json
docs/: getting_started.md  index.md
docs/reference/: hasher.md  index.md  serializer.md
elephant/: __init__.py  decorator.py
elephant/cache/: __init__.py  manager.py
elephant/cacher/: __init__.py  base.py  simple.py
elephant/cli/: __init__.py  cache.py  config.py  setup.py
elephant/db/: __init__.py
elephant/hasher/: __init__.py  base.py  iterable.py  manager.py  numpy.py  pandas.py  to_string.py
elephant/serializer/: __init__.py  base.py  pandas.py  pickle.py
elephant/utils/: __init__.py
examples/many_entries/: run.py
examples/pandas/: pandas_cache.py  run.py
latest/reference/: index.html
latest/reference/hasher/: index.html
latest/reference/serializer/: index.html
scrat/: __init__.py  config.py  decorator.py  squirrel.py
scrat/cli/: __init__.py  setup.py  stash.py
scrat/db/: __init__.py  connector.py  models.py
scrat/hasher/: __init__.py  base.py  iterable.py  manager.py  numpy.py  pandas.py  to_string.py
scrat/serializer/: __init__.py  base.py  dill.py  json.py  numpy.py  pandas.py  pickle.py
scrat/utils/: __init__.py  timer.py
tests/: conftest.py  test_basic.py  test_limits.py  test_watch.py
