[tool.poetry]
name = "scrat"
version = "0.1.0"
description = "Easily stash the results of expensive functions to disk"
authors = ["javiber <javier.berneche@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/javiber/scrat"


keywords = [
    "cache",
    "disk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]



[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.18"
appdirs = "^1.4.4"
click = "^8.1.4"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.4.1"
isort = "^5.12.0"
ipython = "^8.14.0"
pytest-mock = "^3.11.1"
ipdb = "^0.13.13"
flake8 = "^6.0.0"

[tool.poetry.scripts]
scrat = "scrat.cli:scrat"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
